Style and Fix: Style photo gallery images upon hover, bring forward with scale, z-index, and greyscale to color, Fix overlapping sections (bio and photogallery) upon screen size expansion above 1920px

--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -16,6 +16,11 @@
     max-width: 100%;
   }
 
+  body {
+
+    display: flex;
+    flex-direction: column;
+  }
   ul li {
     list-style: none;
   }
